test/good/nullables/nullable01.px

x: Int? = 5
print x
