test/bad/nullables/cmp01.px

x: Int? = 4
x == false
